# nbody

./: CMakeLists.txt  README.md  main.cpp  run.sh
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  nbody
data/: data0.txt  plot.py  testdata.ascii  testdata.txt
lib/: nBodySim.cpp  nBodySim.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp  utils.cpp  utils.hpp
scripts/: 3Danimation.py  animation.py  densityprofile.py  disk.py  energyplot.py  forcecomparison.py  forceprofile.py  initial.py  olddensityprofile.py  plot.py  plotforces.py  spawn.py  treeplot.py  twosheets.py
